--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,19 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+@layer base {
+  .text-default {
+    @apply text-black dark:text-white;
   }
-}
 
-body {
-  color: var(--foreground);
-  background: var(--background);
+  .bg-default {
+    @apply bg-zinc-100 dark:bg-zinc-900;
+  }
 }
