fix: remove unused code

--- a/src/components/core/app-button.module.css
+++ b/src/components/core/app-button.module.css
@@ -14,9 +14,9 @@
   &.fill-none {
   } */
 }
+/* TODO: Add other color variants */
 
+/* TODO: Add other round sizes    */
 .rounded-size-normal {
   @apply rounded;
 }
-
-/* TODO: Add other color variants */
