--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,3 +11,15 @@
     @apply bg-zinc-100 dark:bg-zinc-900;
   }
 }
+
+@layer components {
+  kbd,
+  .kbd {
+    @apply rounded-lg border border-gray-200 bg-gray-100 px-2 py-1.5 font-mono text-xs font-semibold text-gray-800 dark:border-gray-500 dark:bg-gray-600 dark:text-gray-100;
+  }
+
+  .app-page {
+    @apply container;
+    /* TODO: Add default page styles*/
+  }
+}
